Closed Bug 384761 Opened 17 years ago Closed 17 years ago

Camino doesn't set default homepage pref until the homepage is loaded

Categories

(Camino Graveyard :: Preferences, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Camino1.6

People

(Reporter: alqahira, Assigned: stuart.morgan+bugzilla)

Details

(Keywords: regression, Whiteboard: [camino-1.5.5])

Attachments

(2 files)

Once upon a time (or at least I think so), we would write the homepage pref (browser.startup.homepage) with the default homepage URL (HomePageURL from WebsiteDefaults.strings) upon launch, or something like that, such that if you opened the prefs, the default homepage URL was filled in in the box.

Now, it seems we don't write that URL to the prefs until first quit, so if someone opens the prefs (to change something else entirely) and doesn't set a page, they end up with no homepage set.

I'd much rather (and I'm thinking Sam would agree here, for stats) make sure the default homepage gets set correctly in the beginning, and anyone who wants to have a blank homepage can simply delete what we've prefilled, which is a minor inconvenience.
More clear STR:

1. Launch Camino with a fresh profile
2. Open prefs (if you're testing a build that remembers last-selected prefPane, you want General to have been last-selected)
3. Make no changes, close prefs
4. Quit Camino
5. Relaunch Camino
6. Open prefs

In affected builds, the homepage is not prefilled when/before opening the General prefs for the first time and then is saved as blank.

After Ian called me crazy, I did some more extensive checking.  This is only broken on the branches, and only on either 10.3 or PPC.  

Either that, or something is totally crazy about my 10.3 Mac, but I have no other 10.3 or PPC Macs to check, and I can reproduce this reliably.
I saw this on my 10.4 PPC Mac, just before handing it off to my girlfriend.  So looks like it's PPC, not 10.3.
Summary: Camino doesn't set default homepage URL until first quit → Camino doesn't set default homepage URL until first quit on PPC
Version: unspecified → 1.8 Branch
I just saw this testing 1.5.3 ML on 10.4/Intel.  I am seriously losing my mind.
Just so no-one reaches the point where they voluntarily commit themselves, the following steps will trigger the empty-home-page behavior:
1) Launch Camino with a clean profile *and in such a way that there is an override URL that prevents the homepage from opening*. I suspect the latter is the reason for both the suspicion of insanity and the appearance of this being branch only (the welcome page being the obvious way to get that behavior, which happens only with release builds)
2) Open prefs, without having ever opened a tab or window that would trigger a homepage load.

Taking; patch shortly.
Assignee: nobody → stuart.morgan
Summary: Camino doesn't set default homepage URL until first quit on PPC → Camino doesn't set default homepage pref until the homepage is loaded
Version: 1.8 Branch → unspecified
Attached patch fixSplinter Review
Attachment #288504 - Flags: review?(froodian)
Flags: camino1.6? → camino1.6+
Target Milestone: --- → Camino1.6
Comment on attachment 288504 [details] [diff] [review]
fix

aha! r=me
Attachment #288504 - Flags: superreview?(mikepinkerton)
Attachment #288504 - Flags: review?(froodian)
Attachment #288504 - Flags: review+
Comment on attachment 288504 [details] [diff] [review]
fix

sr=pink

I saw this setting up my wiped leopard machine.
Attachment #288504 - Flags: superreview?(mikepinkerton) → superreview+
Is this something we want to take on the 1_5 branch for new users (once it has baked, etc)?
Landed on trunk and MOZILLA_1_8_BRANCH.

Taking for 1.5.x sounds fine to me, since it's a very low-risk fix.
Status: NEW → RESOLVED
Closed: 17 years ago
Flags: camino1.5.5?
Resolution: --- → FIXED
Stuart, this doesn't apply cleanly (hunk 1) on the 1_5 branch, and there are enough changes in context that I'm not sure where that hunk is supposed to go.  Can you spin a new patch?
Attached patch 1.5.5 versionSplinter Review
Applied to the 1_5 branch. My 1.5.x tree isn't set up to build, so this hasn't actually be tested.
Checked in on the CAMINO_1_5_BRANCH.  I built/tested on 10.5/Intel and 10.3.9/PPC.
Flags: camino1.5.5? → camino1.5.5+
Whiteboard: [camino-1.5.5]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: