Camino only - Bug 384761: Set default homepage immediately upon first launch. r=froodian sr=pink